maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:15: error: not found: value sortieTrouvee
while(!sortieTrouvee())
       ^