maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() {
do {
	random3()
	if (random3()==0 && !estFaceMur) {
		avance()
	}
	if (random3()==1) {
		gauche()
	}
	if (random3()==2) {
		droite()
	}
	}
while(!sortieTrouvee())
}
